# mlx-diffusion-kit

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  pyproject.toml
devnotes/: SESSION_LOG.md
docs/: API_MANUAL.md  ARCHITECTURE.md
mlx_diffusion_kit/: __init__.py  maturity.py  orchestrator.py
mlx_diffusion_kit/attention/: __init__.py  ditfastattn.py  residual.py
mlx_diffusion_kit/cache/: __init__.py  deep_cache.py  encoder_sharing.py  fb_cache.py  fbcache.py  layer_redundancy.py  motion.py  multigranular.py  smooth_cache.py  spectral_cache.py  teacache.py
mlx_diffusion_kit/encoder/: __init__.py  embedding_cache.py
mlx_diffusion_kit/gating/: __init__.py  tgate.py
mlx_diffusion_kit/quality/: __init__.py  freeu.py
mlx_diffusion_kit/scheduler/: __init__.py  adaptive_stepping.py  dpm_solver_v3.py
mlx_diffusion_kit/tokens/: __init__.py  ddit_scheduling.py  (+4 more)
scripts/: analyze_layer_redundancy.py  calibrate_teacache.py
tests/: test_adaptive_stepping.py  test_analyze_redundancy.py  test_calibrate_teacache.py  test_ddit_scheduling.py  test_deep_cache.py  test_ditfastattn.py  test_dpm_solver_v3.py  test_embedding_cache.py  test_encoder_sharing.py  test_fb_cache.py  test_fbcache.py  test_freeu.py  test_integration.py  test_layer_redundancy.py  test_learned_sparsity.py  test_maturity.py  test_motion.py  test_multigranular.py  test_orchestrator.py  test_pruning.py  test_residual.py  test_separable_conv3d.py  test_smoke.py  test_smooth_cache.py  test_spectral_cache.py  test_teacache.py  test_tgate.py  test_toca.py  test_tome.py  test_wavelet_cache.py
(+5 files in other folders)
